# SystemProgramming

./: .dockerignore  .env  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  MANUEL.md  README.md  decision_log.md  docker-compose.yml
docker/: .dockerignore  Dockerfile.app
include/: StudentManager.h  db.hpp
reports/: DockerInfo  Week 1 Activity Report – AQIF-LOHJA  week1-report.md
src/: StudentManager.cpp  db.cpp  main.cpp
tests/: test_student.cpp
